# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: py-ci.yml
gendiff/: __init__.py  cli.py  gendiff.py  parser.py
gendiff/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_cli.py  test_formats_json.py  test_formats_plain.py  test_formats_stylish.py  test_gendiff.py  test_parser.py
tests/fixtures/: file1.yml  file2.yaml  help.txt  incorrect_yaml.yaml  result_json.json  result_json.txt  wrong_arguments.txt
