[tool.poetry]
name = "hexlet-code"
version = "0.7.0"
description = "Difference generator"
authors = ["Grigory Sukhotin <grigarazh@yandex.ru>"]
classifiers = [
    "Environment :: Console",
    "Topic :: Utilities"
]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/grigarazh/python-project-50"


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
